--- a/app/base_templates/global/partials/header.html
+++ b/app/base_templates/global/partials/header.html
@@ -17,8 +17,8 @@
         <ul>
             <li class="search">
                 <a class="fa-search" href="#search">Search</a>
-                <form id="search" method="get" action="#">
-                    <input type="text" name="query" placeholder="Search" />
+                <form id="search" method="get" action="{% url "publications:search" %}">
+                    <input type="text" name="q" placeholder="Search" required/>
                 </form>
             </li>
             <li class="menu">
