--- a/app/base_templates/global/partials/publication.html
+++ b/app/base_templates/global/partials/publication.html
@@ -4,36 +4,31 @@
     <!-- Post -->
     <article class="post">
         <header>
-            <div class="title">
-                <h2><a href="{% url "publications:publication-detail" publication.id %}">Magna sed adipiscing</a></h2>
-                <p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
-            </div>
             <div class="meta">
-                <time class="published" datetime="{{ publication.created_at|timesince }}"> {{ publication.created_at|timesince }} {% translate "ago" %}</time>
                 {% if publication.author.profile.picture %}
                 <a href="{% url "profiles:profile" publication.author.username %}" class="author">
-                    <span class="name">{{ publication.author.get_full_name}}</span>
+                    <span class="name">{{ publication.author.username}}</span>
                     <img src="{{ publication.author.profile.picture.url }}" alt="" />
                 </a>
                 {% else %}
-                    <a href="{% url "profiles:profile" publication.author.username %}" class="author">
-                        <span class="name">{{ publication.author.get_full_name}}</span>
-                        <img src="{% static "global/img/profile-without-picture.png" %}" alt="" />
-                    </a>
+                <a href="{% url "profiles:profile" publication.author.username %}" class="author">
+                    <span class="name">{{ publication.author.username}}</span>
+                    <img src="{% static "global/img/profile-without-picture.png" %}" alt="" />
+                </a>
                 {% endif %}
             </div>
+            <div class="meta">
+            <time class="published" datetime="{{ publication.created_at|timesince }}"> {{ publication.created_at|timesince }} {% translate "ago" %}</time>
+            </div>
         </header>
-        {% if publication.img %}
-            <a href="{% url "publications:publication-detail" publication.id %}" class="image featured"><img src="{{ publication.img.url }}" alt="" /></a>
-        {% endif %}
         <p>{{ publication.text }}</p>
+        {% if publication.img %}
+        <a href="{% url "publications:publication-detail" publication.id %}" class="image featured"><img src="{{ publication.img.url }}" alt="" /></a>
+        {% endif %}
         <footer>
-            <ul class="actions">
-                <li><a href="{% url "publications:publication-detail" publication.id %}" class="button large">Continue Reading</a></li>
-            </ul>
             <ul class="stats">
-                <li><a href="#" class="icon solid fa-heart">{{ publication.like.count }}</a></li>
-                <li><a href="#" class="icon solid fa-comment">{{ publication.like.count }}</a></li>
+                <li><a href="{% url "publications:like" publication.id %}" class="icon solid fa-heart">{{ publication.like.count }}</a></li>
+                <li><a href="{% url "publications:publication-detail" publication.id %}" class="icon solid fa-comment">{{ publication.comments.count }}</a></li>
             </ul>
         </footer>
     </article>
