--- a/app/configs/templates/configs/pages/configs.html
+++ b/app/configs/templates/configs/pages/configs.html
@@ -1,14 +1,14 @@
 {% extends "global/base.html" %}
 {% load i18n %}
 {% block content %}
-<div class="container">
+<div id="main">
     <h2>Settings</h2>
-    <a href="{% url "configs:edit_author" %}" class="conf-option">
+    <a href="{% url "configs:edit_author" %}" >
         <div>
             <p>{% trans "Edit Profile" %}</p>
         </div>
     </a>
-    <a href="{% url "authors:logout" %}" class="conf-option">
+    <a href="{% url "authors:logout" %}">
         <div>
             <p>{% trans "Logout" %}</p>
         </div>
