--- a/app/publications/templates/publications/pages/publication-detail.html
+++ b/app/publications/templates/publications/pages/publication-detail.html
@@ -7,12 +7,7 @@
         <!-- Post -->
             <article class="post">
                 <header>
-                    <div class="title">
-                        <h2><a href="#">Magna sed adipiscing</a></h2>
-                        <p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
-                    </div>
                     <div class="meta">
-                        <time class="published" datetime="{{ publication.created_at|timesince }}"> {{ publication.created_at|timesince }} {% translate "ago" %}</time>
                         {% if publication.author.profile.picture %}
                             <a href="{% url "profiles:profile" publication.author.username %}" class="author">
                             <span class="name">{{ publication.author.get_full_name}}</span>
@@ -24,6 +19,9 @@
                                 <img src="{% static "global/img/profile-without-picture.png" %}" alt="" />
                             </a>
                         {% endif %}
+                    </div>
+                    <div class="meta">
+                        <time class="published" datetime="{{ publication.created_at|timesince }}"> {{ publication.created_at|timesince }} {% translate "ago" %}</time>
                     </div>
                 </header>
                 {% if publication.img %}
@@ -37,6 +35,5 @@
                     </ul>
                 </footer>
             </article>
-
     </div>
 {% endblock content %}
