--- a/app/profiles/templates/profiles/profile_detail.html
+++ b/app/profiles/templates/profiles/profile_detail.html
@@ -17,11 +17,11 @@
         </div> 
         <div class="stats">
             <div>
-                <span class="number">{{ profile.followers.count }}</span>
+                <span>{{ profile.followers.count }}</span>
                 <p>{% translate "Followers" %} </p>
             </div>
             <div>
-                <span class="number">{{ profile.follow.count }}</span>
+                <span>{{ profile.follow.count }}</span>
                 <p>{% translate "Following" %}</p>
             </div>
         </div>
