Update the description in the "About" section and adjust the profile picture (no photo); update project dependencies.

--- a/app/base_templates/global/partials/sidebar.html
+++ b/app/base_templates/global/partials/sidebar.html
@@ -13,7 +13,7 @@
     <!-- About -->
         <section class="blurb">
             <h2>About</h2>
-            <p>This is a simple social network developed by Rafael Rodrigues.</p>
+            <p>This is a platform developed by Rafael Rodrigues.</p>
         </section>
 
     <!-- Footer -->
